; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_px-hmac.c_hmac_finish.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_px-hmac.c_hmac_finish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__, i32* }
%struct.TYPE_4__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i32*)* @hmac_finish to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hmac_finish(%struct.TYPE_5__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32* %1, i32** %4, align 8
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  store i32* %11, i32** %5, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @px_md_block_size(i32* %12)
  store i32 %13, i32* %6, align 4
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @px_md_result_size(i32* %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  %17 = call i32* @px_alloc(i32 %16)
  store i32* %17, i32** %8, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @px_md_finish(i32* %18, i32* %19)
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @px_md_reset(i32* %21)
  %23 = load i32*, i32** %5, align 8
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = load i32*, i32** %26, align 8
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @px_md_update(i32* %23, i32* %27, i32 %28)
  %30 = load i32*, i32** %5, align 8
  %31 = load i32*, i32** %8, align 8
  %32 = load i32, i32* %7, align 4
  %33 = call i32 @px_md_update(i32* %30, i32* %31, i32 %32)
  %34 = load i32*, i32** %5, align 8
  %35 = load i32*, i32** %4, align 8
  %36 = call i32 @px_md_finish(i32* %34, i32* %35)
  %37 = load i32*, i32** %8, align 8
  %38 = load i32, i32* %7, align 4
  %39 = call i32 @px_memset(i32* %37, i32 0, i32 %38)
  %40 = load i32*, i32** %8, align 8
  %41 = call i32 @px_free(i32* %40)
  ret void
}

declare dso_local i32 @px_md_block_size(i32*) #1

declare dso_local i32 @px_md_result_size(i32*) #1

declare dso_local i32* @px_alloc(i32) #1

declare dso_local i32 @px_md_finish(i32*, i32*) #1

declare dso_local i32 @px_md_reset(i32*) #1

declare dso_local i32 @px_md_update(i32*, i32*, i32) #1

declare dso_local i32 @px_memset(i32*, i32, i32) #1

declare dso_local i32 @px_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
